--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,8 @@
     "jsonwebtoken": "^9.0.3",
     "multer": "^2.0.2",
     "mysql2": "^3.15.3",
-    "node-cron": "^4.2.1"
+    "node-cron": "^4.2.1",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -31,6 +32,7 @@
     "@types/multer": "^2.0.0",
     "@types/node": "^24.10.2",
     "@types/node-cron": "^3.0.11",
+    "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.11",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
